--- a/src/Kooco.Pikachu.Blazor/Pages/Index.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Index.razor
@@ -6,12 +6,12 @@
 <div class="container">
     <div class="p-5 text-center">
         <Badge Color="Color.Success" class="mb-4">
-            <h5 class="m-1"> <i class="fas fa-rocket"></i> Congratulations, <strong>Pikachu</strong> is successfully running!</h5>
+            <h5 class="m-1"> <i class="fas fa-rocket"></i> 太好了, <strong>GoodPoint</strong> 正在運行中!</h5>
         </Badge>
 
-        <h1>Welcome to the Application</h1>
+        <h1>歡迎來到GoodPoint!</h1>
 
-        <p class="lead px-lg-5 mx-lg-5">@L["LongWelcomeMessage"]</p>
+        <p class="lead px-lg-5 mx-lg-5"></p>
 
         @if (!CurrentUser.IsAuthenticated)
         {
