--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -222,7 +222,7 @@
                     <Table>
                         <TableHeader>
                             <TableRow>
-                                <TableHeaderCell Class="text-center">@L["ItemName"]</TableHeaderCell>
+                                <TableHeaderCell Class="text-center">@L["PropertyName"]</TableHeaderCell>
                                 <TableHeaderCell Class="text-center">
                                     @L["SKU"]
                                     @if (ItemDetailsList != null && ItemDetailsList.Count > 0)
