--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -277,8 +277,8 @@
                 <p class="fw-bold">@L["OrderStatus"]</p>
                 <div class="row">
                     <div class="col-12 d-flex justify-content-between">
-                        <p>Date</p>
-                        <p>Order Created</p>
+                        <p>@L["Date"]</p>
+                        <p>@L["OrderCreated"]</p>
                     </div>
                 </div>
             </CardBody>
