--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/FreebieList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/FreebieList.razor
@@ -14,7 +14,7 @@
 
 <div class="row">
     <div class="col-6">
-        <h3>Freebies List</h3>
+        <h3>@L["FreebiesList"]</h3>
     </div>
     <div class="col-6 text-lg-end">
         <div class="custom-check-group me-1">
