shipment notify and edit order items

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -116,7 +116,8 @@
                                     </tr>
                                     <tr>
                                         <td>@L["Address"]</td>
-                                        <td>@context.AddressDetails, @context.Road, @context.District, @context.City</td>
+                                        <td class="d-none">@context.AddressDetails, @context.Road, @context.District, @context.City</td>
+                                        <td>@context.AddressDetails</td>
                                     </tr>
                                     <tr>
                                         <td>@L["Remarks"]</td>
