--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -7,6 +7,7 @@
 @using Blazorise;
 @using Volo.Abp.AspNetCore.Components.Messages;
 @using Volo.Abp.Users;
+@using Blazorise.LoadingIndicator;
 
 @inject IStringLocalizer<PikachuResource> L;
 @inject NavigationManager NavigationManager;
@@ -29,7 +30,7 @@
 </style>
 
 <h3>@L["OrderDetails"]</h3>
-
+<LoadingIndicator @ref="loading" FullScreen FadeIn>
 <div class="row">
     <div class="col-md-6 col-sm-12">
         <Card>
@@ -78,7 +79,7 @@
                                     </tr>
                                     <tr>
                                         <td>@L["ShippingMethod"]</td>
-                                        <td>@L[Order.DeliveryMethod.ToString()]@Order.ShippingNumber </td>
+                                        <td>@L[Order.DeliveryMethod.ToString()] @Order.ShippingNumber </td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -261,15 +262,16 @@
     <div class="col-md-6 col-sm-12">
         <div class="row mb-2">
             <div class="col-md-6 col-sm-12">
-                @if (Order?.ShippingStatus != ShippingStatus.WaitingForPayment)
+                @if (Order?.ShippingStatus != ShippingStatus.WaitingForPayment || Order?.OrderStatus == OrderStatus.Closed)
                 {
-                    <Button Type="ButtonType.Button" disabled Class="btn btn-sm btn-danger me-1">@L["CancelOrder"]</Button>
+                    var text = Order?.OrderStatus == OrderStatus.Closed ? "Closed" : "CancelOrder";
+                    <Button Type="ButtonType.Button" disabled Class="btn btn-sm btn-danger">@L[text]</Button>
                 }
                 else
                 {
                     <Button Type="ButtonType.Button" @onclick="CancelOrder" Class="btn btn-sm btn-danger">@L["CancelOrder"]</Button>
                 }
-                <Button Type="ButtonType.Button" Class="btn btn-sm btn-secondary">@L["ExchangeItem"]</Button>
+                <Button Type="ButtonType.Button" Class="btn btn-sm btn-secondary me-1">@L["ExchangeItem"]</Button>
             </div>
             <div class="col-md-6 col-sm-12 text-lg-end">
                 <Button Type="ButtonType.Button" Class="btn btn-sm btn-secondary">@L["SplitOrder"]</Button>
@@ -316,11 +318,24 @@
         <h4 class="d-inline-block">@L["OrderItems"]</h4>
     </div>
     <div class="col-6 text-end">
-        <Button Type="ButtonType.Button" Class="btn btn-sm btn-primary">
-            <i class="fa fa-pencil"></i>
-            @L["Edit"]
-        </Button>
-    </div>
+            @if (IsItemsEditMode)
+            {
+                <Button Type="ButtonType.Button" Class="btn btn-sm btn-danger" Clicked="CancelOrderItemChanges">
+                    @L["Cancel"]
+                </Button>
+                <Button Type="ButtonType.Button" Class="btn btn-sm btn-primary" Clicked="SubmitOrderItemChanges">
+                    <i class="fa fa-pencil"></i>
+                    @L["SaveChanges"]
+                </Button>
+            }
+            else
+            {
+                <Button Type="ButtonType.Button" Class="btn btn-sm btn-primary" Clicked="ToggleEditMode">
+                    <i class="fa fa-pencil"></i>
+                    @L["Edit"]
+                </Button>
+            }
+        </div>
     <div class="col-12">
         <Card>
             <CardBody>
@@ -341,9 +356,9 @@
                             {
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="form-check-input" />
+                                        <InputCheckbox class="form-check-input" @bind-Value="item.IsSelected" />
                                     </td>
-                                    <td class="text-start">
+                                    <td class="text-start" style="width: 50%;">
                                         @if (item.ItemType == ItemType.Item)
                                         {
                                             var firstImage = item.Item?.Images?.FirstOrDefault()?.ImageUrl;
@@ -375,15 +390,34 @@
                                         }
 
                                     </td>
-                                    <td>
-                                        @item.Quantity
-                                    </td>
-                                    <td>
-                                        $@item.ItemPrice.ToString("N2")
-                                    </td>
-                                    <td>
-                                        $@item.TotalAmount.ToString("N2")
-                                    </td>
+                                    @if (item.IsSelected && IsItemsEditMode)
+                                    {
+                                        var thisItem = EditingItems.FirstOrDefault(e => e.Id == item.Id);
+                                        @if(thisItem != null)
+                                        {
+                                            <td>
+                                                <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsQuantiyError ? "invalid" : "")" @bind-value="thisItem.Quantity" @onblur="() => CalculateTotal(thisItem)" />
+                                            </td>
+                                            <td>
+                                                <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsItemPriceError ? "invalid" : "")" @bind-value="thisItem.ItemPrice" @onblur="() => CalculateTotal(thisItem)" />
+                                            </td>
+                                            <td>
+                                                $@thisItem.TotalAmount.ToString("N2")
+                                            </td>
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <td>
+                                            @item.Quantity
+                                        </td>
+                                        <td>
+                                            <span>$@item.ItemPrice.ToString("N2")</span>
+                                        </td>
+                                        <td>
+                                            $@item.TotalAmount.ToString("N2")
+                                        </td>
+                                    }
                                 </tr>
                             }
                             <tr>
@@ -522,10 +556,10 @@
                 </div>
                 <div class="row my-2">
                     <label class="form-label">@L["ShippingNumber"]</label>
-                <div class="col-12 mb-2">
-                    <InputText class="form-control" @bind-Value="@shipments.ShippingNumber"></InputText>
-                    <ValidationMessage For="@(() => shipments.ShippingNumber)" />
-                </div>
+                    <div class="col-12 mb-2">
+                        <InputText class="form-control" @bind-Value="@shipments.ShippingNumber"></InputText>
+                        <ValidationMessage For="@(() => shipments.ShippingNumber)" />
+                    </div>
                 </div>
             </ModalBody>
             <ModalFooter>
@@ -541,7 +575,7 @@
         </EditForm>
     </ModalContent>
 </Modal>
-
+</LoadingIndicator>
 @code {
 
 }
