--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -31,10 +31,21 @@
                 <Label Class="form-label">@L["SelectAll"]</Label>
             </div>
             <Button Type="@ButtonType.Button" Class="btn btn-sm btn-secondary">@L["CombineOrders"]</Button>
-            <Button Type="@ButtonType.Button" Class="btn btn-sm btn-primary">
+            @if(Orders.Where(x => x.IsSelected).Count() != 1)
+            {
+            <Button Type="@ButtonType.Button" disabled Class="btn btn-sm btn-primary">
                 <i class="fa fa-print"></i>
                 @L["Print"]
             </Button>
+            }else
+            {
+                <Button Type="@ButtonType.Button" onclick="@NavigateToOrderPrint" Class="btn btn-sm btn-primary">
+                    <i class="fa fa-print"></i>
+                    @L["Print"]
+                </Button>
+
+            }
+
         </div>
     </div>
     <Card>
@@ -55,7 +66,7 @@
                      <DataGridCommandColumn />
                      <DataGridColumn Caption="@L["Select"]" Width="30px">
                          <DisplayTemplate>
-                             <InputCheckbox class="form-check-input" @bind-Value="@context.IsSelected"></InputCheckbox>
+                             <InputCheckbox class="form-check-input"  @bind-Value="@context.IsSelected"></InputCheckbox>
                          </DisplayTemplate>
                      </DataGridColumn>
                      <DataGridColumn Field="@nameof(OrderDto.OrderNo)" Caption="@L["OrderNo"]">
@@ -165,9 +176,6 @@
         </CardBody>
     </Card>
 </LoadingIndicator>
-
-
-
 @code {
 
 }
