--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/CustomTenantManagement.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/CustomTenantManagement.razor
@@ -14,6 +14,7 @@
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.Localization;
 @using Microsoft.Extensions.Localization;
+@using Volo.Abp.Identity;
 
 
 @* @page "/tenant-management/tenants" *@
@@ -156,16 +157,16 @@
                     </div>
                 }
                           <Field>
+
                         <FieldLabel>@L["TenantOwner"]</FieldLabel>
-                        <Select TValue="Guid?" @bind-SelectedValue="@TenantOwnerId">
-                             
-                            @foreach (var tenant in UsersList)
-                            {
-                                <SelectItem TValue="Guid" Value="@(tenant.Id)">
-                                    @tenant.Name
-                                </SelectItem>
-                            }
-                        </Select>
+                        <SelectList TItem="IdentityUserDto"
+            TValue="Guid?"
+            Data="@UsersList"
+            TextField="@((item)=>item.Name)"
+            ValueField="@((item)=>item.Id)"
+            @bind-SelectedValue="@TenantOwnerId"
+            DefaultItemText="Select Tenant Owner" />
+                     
                     </Field>
                     <Field>
                         <FieldLabel>@L["ShareProfit%"]</FieldLabel>
@@ -259,8 +260,7 @@
                                 </ButtonsTemplate>
                             </FilePicker>
                             </Field>
-                          <Field>
-                                               @if(LogoUrl != null)
+                                                           @if(LogoUrl != null)
                 {
                     <div Class="col-12 row">
                        
@@ -276,16 +276,16 @@
                         </div>
                     </div>
                 }
+                          <Field>
+                
                         <FieldLabel>@L["TenantOwner"]</FieldLabel>
-                        <Select TValue="Guid?" @bind-SelectedValue="@TenantOwnerId">
-                           
-                                @foreach (var tenant in UsersList)
-                            {
-                                <SelectItem TValue="Guid" Value="@(tenant.Id)">
-                                    @tenant.Name
-                                </SelectItem>
-                            }
-                        </Select>
+                                 <SelectList TItem="IdentityUserDto"
+            TValue="Guid?"
+            Data="@UsersList"
+            TextField="@((item)=>item.Name)"
+            ValueField="@((item)=>item.Id)"
+            @bind-SelectedValue="@TenantOwnerId"
+            DefaultItemText="Select Tenant Owner" />
                     </Field>
                     <Field>
                         <FieldLabel>@L["ShareProfit%"]</FieldLabel>
